WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195726
Long press gesture recognizers in WKWebView are conflicting with internal gesture recognizers
https://bugs.webkit.org/show_bug.cgi?id=195726
Summary
Long press gesture recognizers in WKWebView are conflicting with internal ges...
James Magahern
Reported
2019-03-13 19:19:01 PDT
Long press gesture recognizers in WKWebView are conflicting with internal scroll view long press gesture recognizers
Attachments
Patch
(2.36 KB, patch)
2019-03-13 19:22 PDT
,
James Magahern
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews200 for win-future
(12.90 MB, application/zip)
2019-03-13 22:00 PDT
,
EWS Watchlist
no flags
Details
Patch
(2.28 KB, patch)
2019-03-21 15:16 PDT
,
James Magahern
no flags
Details
Formatted Diff
Diff
Patch
(3.91 KB, patch)
2019-03-21 16:49 PDT
,
James Magahern
no flags
Details
Formatted Diff
Diff
Patch
(2.53 KB, patch)
2019-03-21 16:53 PDT
,
James Magahern
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
James Magahern
Comment 1
2019-03-13 19:22:32 PDT
Created
attachment 364609
[details]
Patch
James Magahern
Comment 2
2019-03-13 19:22:34 PDT
<
rdar://problem/48582449
>
EWS Watchlist
Comment 3
2019-03-13 19:24:38 PDT
Attachment 364609
[details]
did not pass style-queue: ERROR: Source/WebKit/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Megan Gardner
Comment 4
2019-03-13 20:21:39 PDT
Comment on
attachment 364609
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364609&action=review
You will need to repost a patch with the spaces changes since you do not have committed status on WebKit, but other wise this looks good.
> w/Source/WebKit/ChangeLog:10 > + canPreventGestureRecognizer whitelist.
Spaces, not tabs, even in change logs.
EWS Watchlist
Comment 5
2019-03-13 22:00:01 PDT
Comment hidden (obsolete)
Comment on
attachment 364609
[details]
Patch
Attachment 364609
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/11500552
New failing tests: storage/indexeddb/modern/gc-closes-database-private.html
EWS Watchlist
Comment 6
2019-03-13 22:00:12 PDT
Comment hidden (obsolete)
Created
attachment 364632
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
James Magahern
Comment 7
2019-03-21 15:16:50 PDT
Created
attachment 365628
[details]
Patch
James Magahern
Comment 8
2019-03-21 15:17:27 PDT
I went ahead and moved all this stuff to WebKitAdditions instead.
James Magahern
Comment 9
2019-03-21 16:49:56 PDT
Created
attachment 365645
[details]
Patch
James Magahern
Comment 10
2019-03-21 16:53:55 PDT
Created
attachment 365646
[details]
Patch
WebKit Commit Bot
Comment 11
2019-03-21 18:03:24 PDT
Comment on
attachment 365646
[details]
Patch Clearing flags on attachment: 365646 Committed
r243351
: <
https://trac.webkit.org/changeset/243351
>
WebKit Commit Bot
Comment 12
2019-03-21 18:03:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug