Long press gesture recognizers in WKWebView are conflicting with internal scroll view long press gesture recognizers https://bugs.webkit.org/show_bug.cgi?id=195726 rdar://problem/48582449

Patch by James Magahern <jmagahern@apple.com> on 2019-03-21
Reviewed by Megan Gardner.

We just need to add another clause to WKContentViewInteraction's
canPreventGestureRecognizer whitelist.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:canPreventGestureRecognizer:]):

Canonical link: https://commits.webkit.org/210414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243351 268f45cc-cd09-0410-ab3c-d52691b4dbfc